@@ -39,6 +39,7 @@ Version 2.2.0 - SVN
  - Remove websubmitdaemon, submit directly to database (Closes: #1737229).
  - Add script to restore submission table from SUBMITDIR files.
  - Complete implementation of syslog logging (now also for C/C++).
+ - Send jury user back to referer page after edits (Working: #1821543).
 
 Version 2.1.1 - SVN
 -------------------
